--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
-    background: linear-gradient(90deg, rgba(5,0,85,1) 0%, rgba(76,76,196,1) 49%, rgba(0,146,255,1) 87%);
+    background: rgb(43,180,160);
+    background: linear-gradient(90deg, rgba(43,180,160,1) 0%, rgba(44,105,215,1) 49%, rgba(0,146,255,1) 87%);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
