--- a/style.css
+++ b/style.css
@@ -3,4 +3,6 @@ body {
     background: linear-gradient(90deg, rgba(43,180,160,1) 0%, rgba(122,170,255,1) 43%, rgba(0,146,255,1) 100%);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+h1 {
 
+    }
