--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 div {
-    width: 50;
+    width: 80%;
     margin: auto;
+    
 }
